--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -49,7 +49,9 @@ jobs:
           clean_first: true
           build_verbose: true
 
-      - name: 🧪 run-cpack
+      - name: 📦 run-cpack
         uses: ./
         id: test
+        with:
+          generators: 'NSIS64;STGZ'
         
