--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -53,5 +53,5 @@ jobs:
         uses: ./
         id: test
         with:
-          generators: 'NSIS64;STGZ'
+          generators: 'STGZ'
         
