--- a/.github/workflows/Ubuntu.yml
+++ b/.github/workflows/Ubuntu.yml
@@ -57,3 +57,5 @@ jobs:
         with:
           generators: 'STGZ;TBZ2'
           packages_directory: '../packages'
+          trace: true
+          trace_expand: true
