--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -53,8 +53,9 @@ jobs:
         uses: ./
         id: test
         with:
-          generators: 'STGZ;TBZ2'
+          generators: 'STGZ;TBZ2;NSIS64'
           packages_directory: '../packages'
-          trace: true
-          trace_expand: true
+          verbose: false
+          trace: false
+          trace_expand: false
         
