--- a/.github/workflows/macOS.yml
+++ b/.github/workflows/macOS.yml
@@ -53,7 +53,7 @@ jobs:
         uses: ./
         id: test
         with:
-          generators: 'STGZ;TBZ2;NSIS64'
+          generators: 'STGZ;TBZ2;NSIS'
           packages_directory: '../packages'
           verbose: false
           trace: false
