--- a/.github/workflows/Ubuntu.yml
+++ b/.github/workflows/Ubuntu.yml
@@ -55,7 +55,7 @@ jobs:
         uses: ./
         id: test
         with:
-          generators: 'STGZ;TBZ2;NSIS'
+          generators: 'STGZ;TBZ2'
           packages_directory: '../packages'
           verbose: false
           trace: false
