--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -60,7 +60,7 @@ jobs:
         uses: ./
         id: test
         with:
-          generators: 'STGZ;TBZ2;NSIS'
+          generators: 'STGZ;TBZ2'
           packages_directory: '../packages'
           verbose: false
           trace: false
